→ update current state (2023.10.10)
补全了大部分的跟管理员有关的接口