@@ -7,6 +7,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -14,12 +15,13 @@ import java.util.List;
 public class TestController {
 
 
+    //输出所有TimerConfig内的成员属性。
     @RequestMapping("/test")
-    public R test() throws InstantiationException, IllegalAccessException {
+    public R test() throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         Class<TimerConfig> clazz = TimerConfig.class;
         List<Object> values = new ArrayList<>();
         for (Field declaredField : clazz.getDeclaredFields()) {
-            values.add(declaredField.get(clazz.newInstance()));
+            values.add(declaredField.get(clazz.getDeclaredConstructor().newInstance()));
         }
         return R.OK(values);
     }
